--- a/style.css
+++ b/style.css
@@ -7,21 +7,6 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
     vertical-align: baseline;
 }
 
-/* 
-h1{
-    font-size: 50px;
-}
-.header h1{
-    font-size: 70px;
-
-}
-.header h2{
-    font-size: 45px;
-}
- */
-
-
-
 h1{
     font-family: 'Times New Roman', Times, serif; 
     font-size: 2em;
@@ -35,15 +20,16 @@ h1{
     background-image: url("images/title.jpg");
     background-size: cover;
     background-repeat: no-repeat;
-    /* margin: auto; */
     position: absolute;
     
 }
 .contener .main:nth-child(even){
     background-color: rgba(25, 25, 25, 0.75);
+    color: white;
 }
 .contener .main:nth-child(odd){
     background-color: rgba(250, 250, 250, 0.75);
+    color:black;
 }
 li{
     list-style-type: none;
@@ -53,18 +39,13 @@ li{
     top: 0%;
     right: 0%;
     z-index: 2;
-    
 }
     .nav a{
-        
         text-decoration: none;
         color: white;
-        
-        /* display: inline; */
     }
     .nav ul{
-        background-color: #8b94e7;
-        /* border: 2px solid red; */
+        background-color: rgba(250, 250, 250, 0.75); /* #8b94e7; */
         display: flex;
         flex-direction: row;
         justify-content: flex-end;
@@ -73,7 +54,6 @@ li{
         padding: 8px;
 
         border: 1px solid black;
-        /* border: 1px solid white; */
     }
     .nav li{
         margin: 1px 2px 1px 2px;
@@ -89,17 +69,9 @@ li{
     }
 
 .header{
-    background-repeat: no-repeat; 
-    /* position: absolute; */
     position: relative;
-    /* margin: auto; */
-    /* padding: 100px; */
     width: 100vw;
     padding-bottom: 30px;
-    /* height: 280px; */
-    /* background-color: rgba(25, 25, 25, 0.75); */
-    
-    /* border-radius: 5%; */
 }
 
     .header h1{
@@ -117,8 +89,6 @@ li{
         margin: 5px;
     }
     .header ul{
-        /* border: 1px solid red; */
-        
         text-align: center;
     }
 
@@ -147,15 +117,8 @@ li{
 
 
 .about{
-    background-repeat: no-repeat;
-    /* position: relative;  */
-    /* margin: auto; */
-    /* padding: 100px; */
     width: 100vw;
     height: auto;
-    /* padding: 10px; */
-    /* background-color: rgba(250, 250, 250, 0.75); */
-    /* border-radius: 5%; */
 }
 
     .about p{
@@ -167,12 +130,9 @@ li{
     }
 
 .skills{
-    background-repeat: no-repeat;
     width: 100vw;
     height: auto;
-    /* padding: 10px; */
-    /* background-color: rgba(25, 25, 25, 0.75); */
-    /* border-radius: 5%; */
+    padding-bottom: 20px;
 }
 
     .skills h1{
@@ -182,21 +142,20 @@ li{
 
     .skills ul{
         display: flex;
-        /* border: 4px solid brown; */
         margin: auto;
         padding: 10px;
         width: 640px;
         flex-wrap: wrap;
         justify-content: center;
-        background-color: #2a308f;
+        background-color: rgba(250, 250, 250, 0.75);
+        /* #2a308f; */
         border-radius: 2px;
     }   
     .skills img{
-        border: 5px solid #2a308f;
+        border: 5px transparent;
+        /* #2a308f; */
         width: 150px;
-        height: 150px;;
-        /* border: 4px solid brown; */
-        /* background-color: #a05f5f; */
+        height: 150px;
     }
     .skills h4{
         font-family: 'Times New Roman', Times, serif;
@@ -207,7 +166,6 @@ li{
 
 .contact{
     width: 100vw;
-    /* height: 300px; */
     display: grid;
     grid-template-columns: 50% 50%;
 }
@@ -280,7 +238,6 @@ li{
           }
 
 footer{
-    
     /* margin: auto; */
     
     /* position: fixed; */
